writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -337,6 +337,7 @@ private:
     BookmarkMap_t                                                                   m_aBookmarkMap;
 
     _PageMar                                                                        m_aPageMargins;
+    sal_Int32                                                                       m_nSymboldata;
 
 
     // TableManagers are stacked: one for each stream to avoid any confusion
@@ -461,6 +462,9 @@ public:
     bool GetIsFirstParagraphInSection();
     void SetParaSectpr(bool bParaSectpr);
     bool GetParaSectpr();
+
+    void SetSymbolData( bool nSymbolData );
+    sal_Int32 GetSymbolData();
     /// Setter method for m_bSdt.
     void SetSdt(bool bSdt);
     /// Getter method for m_bSdt.
